k8s/ingress/example02-k8s-fullstack-ingress-demo/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: node-api
          image: registry.sananetco.com:8443/backend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod-apps
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
